--- a/w5_Webpack/package.json
+++ b/w5_Webpack/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "webpack",
     "dev": "webpack-dev-server",
-    "start":"npm run dev",
+    "start": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,9 +21,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.7.2",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
