--- a/w5_ReactRouter/package.json
+++ b/w5_ReactRouter/package.json
@@ -16,15 +16,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^3.26.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-decorators": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.0",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
