--- a/w6_Redux/myapp/package.json
+++ b/w6_Redux/myapp/package.json
@@ -33,6 +33,7 @@
     "node-sass": "^4.13.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
