--- a/w6_Redux/myapp/package.json
+++ b/w6_Redux/myapp/package.json
@@ -7,8 +7,8 @@
     "doc": "doc"
   },
   "scripts": {
-    "dev": "webpack-dev-server",
-    "build": "webpack",
+    "dev": "webpack-dev-server --development",
+    "build": "webpack --production",
     "start": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
