--- a/w6_Redux/myapp/package.json
+++ b/w6_Redux/myapp/package.json
@@ -25,9 +25,12 @@
     "@babel/core": "^7.7.7",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-decorators": "^7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.0",
