--- a/w7_ReactNative/myrn/android/app/build.gradle
+++ b/w7_ReactNative/myrn/android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.application"
 
+
 import com.android.build.OutputFile
 
 /**
@@ -149,6 +150,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+             if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+                 storeFile file(MYAPP_RELEASE_STORE_FILE)
+                 storePassword MYAPP_RELEASE_STORE_PASSWORD
+                 keyAlias MYAPP_RELEASE_KEY_ALIAS
+                 keyPassword MYAPP_RELEASE_KEY_PASSWORD
+             }
+         }
     }
     buildTypes {
         debug {
@@ -160,6 +169,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
@@ -199,3 +209,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply from:  file("../../node_modules/react-native-vector-icons/fonts.gradle")
